samples/_failures_safe/1761505764_39c726_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b04d401d.c: In function ‘main’:
./samples/SAFE/__tmp_b04d401d.c:147:5: error: expected ‘,’ or ‘;’ at end of input
  147 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_b04d401d.c:147:5: error: expected declaration or statement at end of input
